package(default_visibility = ["//visibility:public"])

proto_library(
    name = "foxglove_proto",
    srcs = glob(["proto/*.proto"]),
    deps = [
        "@protobuf//:duration_proto",
        "@protobuf//:timestamp_proto",
    ],
)

cc_proto_library(
    name = "foxglove_cc_proto",
    deps = [":foxglove_proto"],
)
