load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "messages",
    srcs = glob(["messages/src/*.cpp"]),
    hdrs = glob(["messages/include/messages/*.h"]),
    includes = ["messages/include"],
    deps = [
        "//graph",
        "//models",
    ],
)

cc_library(
    name = "event",
    srcs = glob(["event/src/*.cpp"]),
    hdrs = glob(["event/include/event/*.h"]),
    includes = ["event/include"],
    deps = [
        ":messages",
    ],
)

cc_library(
    name = "context",
    srcs = glob(["context/src/*.cpp"]),
    hdrs = glob(["context/include/context/*.h"]),
    includes = ["context/include"],
    deps = [
        ":event",
    ],
)

cc_library(
    name = "actors",
    srcs = glob(["actors/src/*.cpp"]),
    hdrs = glob(["actors/include/actors/*.h"]),
    includes = ["actors/include"],
    deps = [
        ":context",
        ":event",
        ":messages",
        "//scene",
        "//solver:solvers",
        "@mcap",
    ],
)

cc_library(
    name = "launcher",
    srcs = glob(["launcher/src/*.cpp"]),
    hdrs = glob(["launcher/include/launcher/*.h"]),
    includes = ["launcher/include"],
    deps = [
        ":actors",
        ":context",
        ":event",
    ],
)

cc_binary(
    name = "main",
    srcs = ["main/src/main.cpp"],
    data = glob(["data/*"]),
    deps = [
        ":actors",
        ":launcher",
        "//models",
        "//solver:factory",
        "@boost.program_options",
    ],
)
